Seperate the target variable from training dataset

--- a/classificationofacademicsuccess.ipynb
+++ b/classificationofacademicsuccess.ipynb
@@ -350,8 +350,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "8c097a29-f701-4068-a3f5-1bdef6438bfc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## seperate the target variable from the training dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "2ab2b498-0617-45b8-bd6b-c60caff8e503",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_set_label = training_set.Target.copy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c723563d-49cd-4bfa-9352-98a6bd57eca4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method NDFrame.copy of 0        Graduate\n",
+       "1         Dropout\n",
+       "2         Dropout\n",
+       "3        Enrolled\n",
+       "4        Graduate\n",
+       "           ...   \n",
+       "76513    Graduate\n",
+       "76514    Graduate\n",
+       "76515    Enrolled\n",
+       "76516     Dropout\n",
+       "76517    Graduate\n",
+       "Name: Target, Length: 76518, dtype: object>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "training_set_label\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f741446-cca6-4a9c-a371-6a1f20d3bbc9",
    "metadata": {},
    "outputs": [],
    "source": []
